--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@mapbox/geo-viewport": "^0.2.2",
 		"@mapbox/react-native-mapbox-gl": "^6.0.0",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
