--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react-native": "^0.50.3",
 		"react-native-elements": "^0.18.2",
 		"react-native-vector-icons": "^4.4.2",
-		"react-navigation": "^1.0.0-beta.19"
+		"react-navigation": "^1.0.0-beta.19",
+		"tcomb-form-native": "^0.6.11"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
